// Copyright 2023 Harness Inc. All rights reserved.
// Use of this source code is governed by the PolyForm Free Trial 1.0.0 license
// that can be found in the licenses directory at the root of this repository, also available at
// https://polyformproject.org/wp-content/uploads/2020/05/PolyForm-Free-Trial-1.0.0.txt.

syntax = "proto3";

package io.harness.eventsframework.schemas.entity_crud.modulelicense;

option java_multiple_files = true;
option go_package = "953_events_api";

message ModuleLicenseEntityChangeDTO {
  string accountIdentifier = 1;
  string moduleType = 2;
  string edition = 3;
  string licenseType = 4;
  string licenseStatus = 5;
}
